--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>First Example</title>
   </head>
   <body>
-    <div>Hello world from Zeeshan</div>
+    <div>Hello world from Zeeshan <s>Adil</s></div>
   </body>
 </html>
